packages/typ/tests/fixtures/diagnostics/0301_fun_monomorphic_int_bool_use_07.ml.expected
File "0301_fun_monomorphic_int_bool_use_07.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0301_fun_monomorphic_int_bool_use_07 is not a valid module name.

File "0301_fun_monomorphic_int_bool_use_07.ml", line 1, characters 24-28:
1 | let use_eta f = (f 6, f true)
                            ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
