packages/typ/tests/fixtures/diagnostics/0301_fun_monomorphic_int_bool_use_07.ml
let use_eta f = (f 6, f true)
